[gd_scene load_steps=12 format=2]

[ext_resource path="res://Environment.gd" type="Script" id=1]
[ext_resource path="res://Lander.gd" type="Script" id=2]
[ext_resource path="res://Ground.gd" type="Script" id=3]
[ext_resource path="res://Flag.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 25 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.473054 )
colors = PoolColorArray( 0.249729, 0.166595, 0.414062, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.205298, 0.821192 )
colors = PoolColorArray( 0.867767, 0.917969, 0, 1, 1, 0, 0, 1 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 5.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 5.30426
height = 17.7217

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 50, 10 )

[node name="Environment" type="Node2D"]
script = ExtResource( 1 )

[node name="Lander" type="RigidBody2D" parent="."]
position = Vector2( 507, 56 )
contacts_reported = 4
contact_monitor = true
script = ExtResource( 2 )

[node name="BodyShape" type="CollisionShape2D" parent="Lander"]
shape = SubResource( 1 )

[node name="BodySprite" type="Sprite" parent="Lander"]
texture = SubResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 0, 50, 50 )

[node name="MainEngine" type="CPUParticles2D" parent="Lander"]
position = Vector2( 0, 27 )
rotation = 1.5708
emitting = false
amount = 32
speed_scale = 4.0
randomness = 0.57
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 1, 10 )
spread = 10.0
gravity = Vector2( 0, 9.8 )
initial_velocity = 100.0
initial_velocity_random = 0.1
scale_amount = 6.0
scale_amount_random = 0.48
color_ramp = SubResource( 4 )

[node name="LeftEngine" type="CPUParticles2D" parent="Lander"]
position = Vector2( -24, -14 )
rotation = 3.14159
emitting = false
speed_scale = 4.0
randomness = 0.57
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 1, 2 )
flag_align_y = true
spread = 10.0
gravity = Vector2( 0, 9.8 )
initial_velocity = 100.0
initial_velocity_random = 0.5
scale_amount = 6.0
scale_amount_random = 0.48
color_ramp = SubResource( 4 )

[node name="RightEngine" type="CPUParticles2D" parent="Lander"]
position = Vector2( 25, -15 )
emitting = false
speed_scale = 4.0
randomness = 0.57
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 1, 2 )
flag_align_y = true
spread = 10.0
gravity = Vector2( 0, 9.8 )
initial_velocity = 100.0
initial_velocity_random = 0.5
scale_amount = 6.0
scale_amount_random = 0.48
color_ramp = SubResource( 4 )

[node name="RightLegShape" type="CollisionShape2D" parent="Lander"]
position = Vector2( 33.5414, 29.2183 )
rotation = -0.349066
shape = SubResource( 5 )

[node name="LeftLegShape" type="CollisionShape2D" parent="Lander"]
position = Vector2( -32.6775, 29.3801 )
rotation = 0.349066
shape = SubResource( 6 )

[node name="Line2D2" type="Line2D" parent="Lander"]
position = Vector2( 33.5414, 29.2183 )
rotation = -0.349066
points = PoolVector2Array( 0, 14, 0, -14 )
default_color = Color( 0, 0.164706, 1, 1 )
texture_mode = -1111170616

[node name="Line2D" type="Line2D" parent="Lander"]
position = Vector2( -32.6775, 29.3801 )
rotation = 0.349066
points = PoolVector2Array( 0, 14, 0, -14 )
default_color = Color( 0, 0.164706, 1, 1 )
texture_mode = -1111170616

[node name="Ground" type="RigidBody2D" parent="."]
position = Vector2( 512, 600 )
mode = 1
script = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ground"]
visible = false
modulate = Color( 0.47451, 0, 0, 1 )
self_modulate = Color( 0.654902, 0.0235294, 0.0235294, 1 )
polygon = PoolVector2Array( 1, 0.295532, -508, 3.29553, -510, -154.704, -373, -106.704, -203, -170.704, -86, -127.704, 80, -127.704, 179, -190.704, 250, -91.7045, 330, -95.7045, 350, -152.704, 455, -185.704, 515, -127.704, 516, 1.29553 )

[node name="Polygon2D" type="Polygon2D" parent="Ground"]
color = Color( 0, 0, 0, 1 )

[node name="LandingArea" type="Area2D" parent="Ground"]
position = Vector2( 0, -200 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground/LandingArea"]
shape = SubResource( 7 )

[node name="FlagLeft" type="Sprite" parent="Ground/LandingArea"]
position = Vector2( -40, -15 )
texture = ExtResource( 4 )

[node name="FlagRight" type="Sprite" parent="Ground/LandingArea"]
position = Vector2( 58, -14 )
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.01

[node name="RewardLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Reward:"

[node name="StateLabel" type="Label" parent="."]
margin_left = 0.598724
margin_top = 17.3633
margin_right = 40.5987
margin_bottom = 31.3633
text = "State:"

[node name="CmdLine" type="Label" parent="."]
margin_left = 1.0
margin_top = 38.0
margin_right = 63.0
margin_bottom = 103.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Ground/LandingArea" to="." method="_on_LandingArea_body_entered"]
[connection signal="body_exited" from="Ground/LandingArea" to="." method="_on_LandingArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
